bk_ida/gccida/c3/dwarf2out_decl
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_decl/src/dwarf2out.c:12078:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_decl/src/dwarf2out.c:12086:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL || ( BYTE1( decl->block.supercontext) & v5) != 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_decl/src/dwarf2out.c:12108:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 < DINFO_LEVEL_NORMAL ) 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dwarf2out_decl/src/obj/dwarf2out.o] Error 1
